syntax = "proto3";

package rune.api;

import "pkg/api/proto/common.proto";

option go_package = "github.com/rzbill/rune/pkg/api/generated";

message Configmap {
  string name = 1;
  string namespace = 2;
  map<string, string> data = 3;
  int32 version = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateConfigmapRequest { 
  Configmap configmap = 1;
  bool ensure_namespace = 2;
}
message GetConfigmapRequest { string name = 1; string namespace = 2; }
message UpdateConfigmapRequest { Configmap configmap = 1; }
message DeleteConfigmapRequest { string name = 1; string namespace = 2; }
message ListConfigmapsRequest { 
  string namespace = 1;
  map<string, string> label_selector = 2;
  map<string, string> field_selector = 3;
  PagingParams paging = 4;
}

message ConfigmapResponse { Configmap configmap = 1; Status status = 2; }
message ListConfigmapsResponse { repeated Configmap configmaps = 1; Status status = 2; }

service ConfigMapService {
  rpc CreateConfigmap(CreateConfigmapRequest) returns (ConfigmapResponse);
  rpc GetConfigmap(GetConfigmapRequest) returns (ConfigmapResponse);
  rpc UpdateConfigmap(UpdateConfigmapRequest) returns (ConfigmapResponse);
  rpc DeleteConfigmap(DeleteConfigmapRequest) returns (Status);
  rpc ListConfigmaps(ListConfigmapsRequest) returns (ListConfigmapsResponse);
}


